// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlatCard should render with many props assigned 1`] = `
<article
  className="box-border my-6 mx-4 relative max-w-[400px] test-class"
>
  <div
    className="p-8 border-4 border-solid border-themePrimary"
  >
    <div
      className="order-2 text-center"
    >
      <h1>
        Main heading
      </h1>
      <h6>
        Sub heading
      </h6>
    </div>
    <hr
      className="w-10/12 border-1 border-solid border-themePrimary"
    />
    <div>
      <p>
        Example content goes here
      </p>
      <p>
        More content goes here
      </p>
    </div>
    <div
      className="text-center absolute left-0 right-0 -bottom-7 [&>button]:hover:bg-white [&>button]:hover:text-themeSecondary [&>button]:focus-visible:text-themePrimary [&>button]:focus-visible:bg-white [&>a]:hover:bg-white [&>a]:hover:text-themeSecondary [&>a]:focus-visible:bg-white [&>a]:focus-visible:text-themeSecondary "
    >
      <a
        className="Button primary"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Widget Action
      </a>
    </div>
  </div>
</article>
`;

exports[`FlatCard should render with required props 1`] = `
<article
  className="box-border my-6 mx-4 relative max-w-[400px]"
>
  <div
    className="p-8 border-4 border-solid border-themePrimary"
  >
    <div>
      <p>
        Example content goes here
      </p>
      <p>
        More content goes here
      </p>
    </div>
  </div>
</article>
`;
